--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               </div>
               <div class="col-sm-6 py-1">
                 <span class="fw-medium text-primary">Email:</span>
-                amarnath@align2rise.com
+                amarnath8247@gmail.com
               </div>
               <div class="col-sm-6 py-1">
                 <span class="fw-medium text-primary">Address:</span> 25-7-363/1
