--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     />
 
     <!-- Favicon -->
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/logo.png" type="image/x-icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
